Lab08 adding authenication
